--- a/css/drums.css
+++ b/css/drums.css
@@ -1,145 +1,15 @@
-.drum-machine {
+.heart-machine {
     margin: 0 0 4rem;
-  }
-  
-.drum-machine-wrapper {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-gap: 3rem;
-}
-
-.drum-machine-item:nth-of-type(1) {
-    animation-delay: 350ms
-}
-
-.drum-machine-item:nth-of-type(2) {
-    animation-delay: 422ms
-}
-
-.drum-machine-item:nth-of-type(3) {
-    animation-delay: 494ms
-}
-
-.drum-machine-item:nth-of-type(4) {
-    animation-delay: 566ms
-}
-
-.drum-machine-item:nth-of-type(5) {
-    animation-delay: 638ms
-}
-
-.drum-machine-item:nth-of-type(6) {
-    animation-delay: 710ms
-}
-
-.drum-machine-item {
-    display: flex;
-    flex-grow: 0;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    transform: translate3d(0, 0, 0);
-    transition: -webkit-transform .09s;
-    transition: transform .09s;
-    transition: transform .09s, -webkit-transform .09s;
-    cursor: pointer;
-    border-radius: 4px;
-}
-
-.drum-machine-item-key {
-    width: 32px;
-    height: 32px;
-    border-radius: 4px;
-    background-color: var(--gray03);
     display: flex;
     align-items: center;
-    justify-content: center;
-    font-family: var(--code);
-    color: var(--gray54);
+    flex-direction: row;
+    gap: 2rem;
     user-select: none;
 }
 
-.drum-machine-item:active .drum-machine-item-key {
-    background-color: var(--blue);
-    color: var(--white);
-}
-
-@keyframes key-pressed-hold {
-    0% {
-        background-color: var(--whiter);
-        transform: scale(1);
-    }
-
-    1% {
-        transform: scale(.9);
-    }
-
-    30% {
-        background-color: var(--blue);
-    }
-
-    100% {
-        background-color: var(--blue);
-        transform: scale(.85);
-    }
-}
-
-@keyframes fade-in-out {
-    0% {
-        opacity: 0
-    }
-
-    15% {
-        opacity: 1
-    }
-
-    85% {
-        opacity: 1
-    }
-
-    100% {
-        opacity: 0
-    }
-}
-
-@keyframes intro-fade-slide {
-    0% {
-        opacity: 0;
-        transform: translateY(8px)
-    }
-
-    24% {
-        opacity: 1
-    }
-
-    47% {
-        transform: translateY(-0.5px)
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateY(0)
-    }
-}
-
-@keyframes intro-fade-slide-2 {
-    0% {
-        opacity: 0;
-        transform: translateY(8px)
-    }
-
-    19% {
-        opacity: 1
-    }
-
-    34.1% {
-        transform: translateY(-1px)
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateY(0)
-    }
+.heart {
+    width: 100px;
+    cursor: grab;
 }
 
 @keyframes wiggle {
@@ -162,38 +32,6 @@
     100% {
         transform: translateY(0px)
     }
-}
-
-.drum-intro {
-    animation: intro-fade-slide .415s ease-out;
-    animation-fill-mode:forwards
-}
-
-.drum-machine-item svg {
-    fill: var(--blue);
-    margin-bottom: 2rem;
-}
-
-.drum-machine-item-glyph {
-    width: 32px;
-    height: 32px;
-    margin-bottom: 2rem;
-    font-size: 24px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.sound-played-glyph, .drum-machine-item-touched svg {
-    animation: wiggle .13s ease-out;
-    animation-fill-mode: none;
-}
-
-.key-pressed-hold, .drum-machine-item:active .drum-machine-item-key {
-    background-color: var(--blue);
-    transform: scale(.85);
-    color: var(--white87) !important;
-    animation: key-press-hold .13s ease-out;
 }
 
 @media screen and (max-width: 768px) {
