--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,11 @@ body {
   font-variant-ligatures: common-ligatures;
   background: var(--gray01);
   line-height: 1.5;
+  transition: background-color .7s;
+}
+
+body * {
+  transition: background-color .7s, color .4s;
 }
 
 h1, h2 {
@@ -158,7 +163,7 @@ ol li {
   align-items: center;
   width: fit-content;
   gap: 1rem;
-  transition: background-color .07s, color .07s;
+  transition: background-color .04s, color .07s;
   cursor: pointer;
 }
 
