--- a/css/styles.css
+++ b/css/styles.css
@@ -1,406 +1,7 @@
 /* @styles */
 
 @import "reset.css";
+@import "layout.css";
 @import "heart.css";
 @import "dark.css";
 @import "media.css";
-
-:root {
-  --eigengrau: 22,22,29;
-  --whiter: 250,250,250;
-  --black: rgba(var(--eigengrau));
-  --gray87: rgba(var(--eigengrau), 0.87);
-  --gray54: rgba(var(--eigengrau), 0.54);
-  --gray38: rgba(var(--eigengrau), 0.38);
-  --gray12: rgba(var(--eigengrau), 0.12);
-  --gray03: rgba(var(--eigengrau), 0.03);
-  --gray01: rgba(var(--eigengrau), 0.01);
-  --tealRGB: 0, 255, 200;
-  --teal: rgba(var(--tealRGB));
-  --teal03: rgba(var(--tealRGB), .03);
-  --teal12: rgba(var(--tealRGB), .12);
-  --teal38: rgba(var(--tealRGB), .38);
-  --teal54: rgba(var(--tealRGB), .54);
-  --teal87: rgba(var(--tealRGB), .87);
-  --blueRGB: 0, 133, 255;
-  --blue: rgba(var(--blueRGB));
-  --blue03: rgba(var(--blueRGB), .03);
-  --blue12: rgba(var(--blueRGB), .12);
-  --blue38: rgba(var(--blueRGB), .38);
-  --blue54: rgba(var(--blueRGB), .54);
-  --yellow: #f9ec4d;
-  --orange: rgb(229, 82, 66);
-  --white: rgba(var(--whiter));
-  --white87: rgba(var(--whiter), 0.87);
-  --white54: rgba(var(--whiter), 0.54);
-  --white38: rgba(var(--whiter), 0.38);
-  --white12: rgba(var(--whiter), 0.12);
-  --reading: inherit;
-  --body: inherit;
-  --fontstack: 'Inter', -apple-system, BlinkMacSystemFont, segoe ui, Ubuntu, roboto, arial, sans-serif,  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  --displaystack: 'Calistoga', cursive;
-  --codestack: 'SF Mono', SFMono-Regular, ui-monospace, 'DejaVu Sans Mono', Menlo, Consolas, monospace;
-}
-
-html, body {
-  scroll-behavior: smooth;
-}
-
-body {
-  font-family: var(--fontstack);
-  font-size: var(--body);
-  text-rendering: optimizeLegibility;
-  color: var(--black);
-  -webkit-font-smoothing: antialiased;
-  font-variant-ligatures: common-ligatures;
-  background: var(--gray01);
-  line-height: 1.5;
-  transition: background-color .7s;
-}
-
-body * {
-  transition: background-color .7s, color .4s;
-}
-
-h1, h2 {
-  margin-bottom: 2em;
-  font-weight: 500;
-}
-
-h1 span {
-  color: var(--gray54);
-}
-
-h3 {
-  font-weight: 600;
-  margin-bottom: 1rem;
-}
-
-h5 {
-  margin-bottom: 1rem;
-}
-
-p, ol {
-  margin-bottom: 2rem;
-}
-
-code {
-  font-family: var(--codestack);
-  color: var(--gray54);
-}
-
-a {
-  color: var(--blue);
-  /* display: inline-block; */
-  text-decoration-thickness: 2px;
-  text-underline-offset: 4px;
-  text-decoration-color: var(--blue12);
-}
-
-a i {
-  margin: 0 0 0 4px;
-  text-decoration: none;
-  display: inline-block;
-}
-
-a.liink {
-  display: flex;
-  flex-direction: column;
-  text-decoration: none;
-  color: inherit;
-  padding: 1rem;
-  border-radius: 10px;
-  margin: 0 -1rem 1rem;
-}
-
-a.liink.pre {
-  background-color: var(--gray03);
-}
-
-a.liink:hover {
-  background-color: var(--blue03);
-}
-
-a.liink .desc {
-  color: var(--gray54);
-}
-
-a.liink:hover .title {
-  color: var(--blue);
-}
-
-a.liink:hover .desc {
-  color: var(--blue54);
-}
-
-abbr {
-  font-size: .96em;
-  letter-spacing: 1px;
-}
-
-i {
-  font-family: var(--fontstack);
-}
-
-ol {
-  padding-left: 1em;
-}
-
-ol li {
-  padding: 0 0 1rem;
-  list-style: disc;
-}
-
-.btn {
-  background-color: var(--blue03);
-  padding: 1rem 1.5rem .8rem;
-  border-radius: 10px;
-  margin: 0 0 1rem;
-  text-decoration: none;
-  color: var(--blue);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: fit-content;
-  gap: 1rem;
-  transition: background-color .04s, color .07s;
-  cursor: pointer;
-}
-
-.btn svg {
-  transition: fill .07s;
-}
-
-.btn .hotkey {
-  display: inline-block;
-  padding: 0 4px;
-  border: solid 1px var(--gray12);
-  font-family: var(--codestack);
-  border-radius: 4px;
-  color: var(--gray54);
-  font-size: .8em;
-}
-
-.btn:hover {
-  background-color: var(--blue12);
-  color: var(--blue);
-}
-
-.btn svg .fill-primary {
-  fill: var(--blue);
-}
-
-.btn svg .fill-secondary {
-  fill: var(--blue38);
-}
-
-.btn:active, .btn.active {
-  background-color: var(--blue);
-  color: var(--white87);
-}
-
-.btn:active svg .fill-primary, .btn.active svg .fill-primary {
-  fill: var(--white87);
-}
-
-.btn:active svg .fill-secondary, .btn.active svg .fill-secondary {
-  fill: var(--white38);
-}
-
-.btns {
-  padding: 2rem 0;
-}
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 3rem;
-  height: 1.5rem;
-}
-
-.switch input { 
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: var(--blue12);
-  transition: .4s;
-  border-radius: 12px;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 18px;
-  width: 18px;
-  left: 4px;
-  bottom: 3px;
-  background-color: var(--blue);
-  transition: .5s;
-  border-radius: 50%;
-  box-shadow: 0 1px 3px var(--gray12);
-}
-
-input:checked + .slider {
-  background-color: var(--blue54);
-}
-
-input:focus + .slider {
-}
-
-input:checked + .slider:before {
-  transform: translateX(22px);
-  background-color: var(--blue);
-}
-
-svg .fill-primary {
-  fill: var(--gray87);
-}
-
-svg .fill-secondary {
-  fill: var(--gray38);
-}
-
-.page {
-  position: relative;
-  margin: 0 auto;
-  max-width: 576px;
-  padding: 4rem 0;
-}
-
-nav {
-  display: grid;
-  column-gap: 32px;
-  padding: 0 0 2rem;
-  grid-template-columns: auto auto;
-}
-
-nav .pic {
-  margin-bottom: 0;
-}
-
-nav .next {
-  text-align: right;
-}
-
-header {
-  padding: 3rem 0 4rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-header p {
-  color: var(--gray54);
-}
-
-.pic, .pic::after {
-  width: 96px;
-  height: 96px;
-  border-radius: 50%;
-}
-
-.pic {
-  overflow: hidden;
-  transition-timing-function: cubic-bezier(0.4, 0.0, 0.2, 1);
-  transition-property: background, color;
-  transition-duration: .2s;
-  position: relative;
-  margin-bottom: 64px;
-  display: inline-block;
-}
-
-.pic::after {
-  content: '\2190';
-  left: 0;
-  top: 0;
-  opacity: 0;
-  position: absolute;
-  display: block;
-}
-
-.pic.home::after {
-  content: '';
-}
-
-.pic::after {
-  color: var(--white);
-  text-align: center;
-  line-height: 96px;
-  font-weight: 500;
-  font-size: calc(var(--reading)*1.5625);
-  cursor: pointer;
-}
-
-.pic:hover {
-  background: var(--blue);
-}
-
-.pic:hover::after {
-  opacity: 1;
-}
-
-.pic img {
-  transition-timing-function: cubic-bezier(0.4, 0.0, 0.2, 1);
-  transition-property: opacity;
-  transition-duration: .2s;
-  display: block;
-  border-radius: 50%;
-  width: 100%;
-}
-
-.pic:hover img {
-  opacity: 0;
-}
-
-footer ul {
-  margin-bottom: 4rem;
-}
-
-footer ul li {
-  padding: 0 0 1rem;
-}
-
-img.blend {
-  mix-blend-mode: darken;
-}
-
-figure {
-  padding: 3em 0;
-  text-align: center;
-}
-
-figure figcaption {
-  color: var(--gray38);
-  padding: var(--reading) 0;
-  border-radius: 4px;
-  max-width: 448px;
-  margin: 0 auto;
-}
-
-figure img {
-  display: inline-block;
-  border-radius: 4px;
-  max-height: 100vh;
-  border: 1px solid rgba(var(--eigengrau), 0.03);
-}
-
-figure.research img {
-  max-width: 640px;
-}
-
-figure.screen img, figure.research img {
-  border: none;
-}
-
-.hidden {
-  display: none !important;
-}
