--- a/css/layout.css
+++ b/css/layout.css
@@ -158,6 +158,7 @@
     gap: 1rem;
     transition: background-color .04s, color .07s;
     cursor: pointer;
+    user-select: none;
   }
   
   .btn svg {
@@ -189,7 +190,7 @@
   
   .btn:active, .btn.active {
     background-color: var(--blue);
-    color: var(--white87);
+    color: var(--white);
   }
   
   .btn:active svg .fill-primary, .btn.active svg .fill-primary {
