--- a/css/layout.css
+++ b/css/layout.css
@@ -1,6 +1,6 @@
 :root {
     --eigengrau: 22,22,29;
-    --whiter: 250,250,250;
+    --whiter: 255,255,255;
     --black: rgba(var(--eigengrau));
     --gray87: rgba(var(--eigengrau), 0.87);
     --gray54: rgba(var(--eigengrau), 0.54);
@@ -24,6 +24,7 @@
     --yellow: #f9ec4d;
     --orange: rgb(229, 82, 66);
     --white: rgba(var(--whiter));
+    --white100: rgba(var(--whiter));
     --white87: rgba(var(--whiter), 0.87);
     --white54: rgba(var(--whiter), 0.54);
     --white38: rgba(var(--whiter), 0.38);
@@ -51,7 +52,7 @@ html, body {
     -webkit-font-smoothing: antialiased;
     font-variant-ligatures: common-ligatures;
     line-height: 1.5;
-    background-color: var(--white);
+    background-color: var(--white100);
     transition: background-color .1s, margin 0.3s cubic-bezier(0.32, 0.72, 0, 1), border-radius 0.3s cubic-bezier(0.32, 0.72, 0, 1);
 }
   
@@ -152,7 +153,6 @@ html, body {
     background-color: var(--blue03);
     padding: 1rem 1.5rem .8rem;
     border-radius: 10px;
-    margin: 0 0 1rem;
     text-decoration: none;
     color: var(--blue);
     display: flex;
@@ -211,10 +211,6 @@ html, body {
   
 .btn:active svg .fill-secondary, .btn.active svg .fill-secondary {
     fill: var(--white38);
-}
-  
-.btns {
-    padding: 2rem 0;
 }
   
 .switch {
@@ -278,44 +274,59 @@ html, body {
 .page {
     position: relative;
     margin: 0 auto;
-    max-width: 576px;
-    padding: 4rem 0;
+    max-width: 640px;
+    padding: 2rem 0;
 }
   
 nav {
-    display: grid;
-    column-gap: 32px;
-    padding: 0 0 2rem;
-    grid-template-columns: auto auto;
-}
-  
-nav .pic {
-    margin-bottom: 0;
-}
-  
-nav .next {
-    text-align: right;
-}
-  
-header {
-    padding: 3rem 0 4rem;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    gap: .5rem;
+    margin: 0 -.5rem 2rem;
+    align-items: center;
+}
+
+nav a {
+  padding: .5rem;
+  text-decoration: none;
+  border-radius: 4px;
+}
+
+nav a:hover {
+  text-decoration: underline;
+  text-decoration-color: var(--blue12);
+}
+
+nav .switch {
+  margin-left: auto;
+}
+
+header {
+    padding: 0 0 4rem;
+    display: flex;
+    flex-direction: column;
+}
+
+header a {
+  text-decoration: none;
+  color: var(--gray87);
+  font-weight: 700;
+  font-size: 1.5rem;
 }
   
-header p {
+header div {
     color: var(--gray54);
+}
+
+section {
+  margin: 0 0 4rem;
 }
 
 .toolbar {
     display: flex;
     flex-direction: row;
     justify-content: end;
-}
-  
-.toolbar .btn {
-    margin-bottom: 0;
+    margin-bottom: 2rem;
 }
 
 .pic, .pic::after {
@@ -376,9 +387,13 @@ header p {
 .pic:hover img {
     opacity: 0;
 }
+
+footer {
+  margin: 0 0 4rem;
+}
   
 footer ul {
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
 }
 
 footer ul li {
