--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 
 @import "reset.css";
 @import "layout.css";
+@import "switches.css";
 @import "heart.css";
 @import "dark.css";
 @import "media.css";
