--- a/css/heart.css
+++ b/css/heart.css
@@ -9,7 +9,7 @@
 }
 
 .col-heart {
-    max-width: 142px;
+    max-width: 99px;
     cursor: grab;
     /* clip-path: path("M0.00292969 80.3685V0.598636L100.003 0.598633V112.982H76.9171C74.3955 112.982 69.8567 108.129 64.1412 108.129C34.2188 108.129 28.5033 94.3446 23.1407 83.6739C20.0422 82.8039 18.571 81.8056 17.191 80.3685H0.00292969Z"); */
 }
@@ -20,4 +20,57 @@
 
 .heart:active {
     cursor: grabbing;
+}
+
+.mini-preview-anchor {
+    position: relative;
+    display: inline;
+}
+
+.mini-preview-wrapper {
+    position: fixed;
+    overflow: hidden;
+    z-index: -1;
+    opacity: 0;
+    box-shadow: 0px 0px 16px var(--gray38);
+    border-radius: 10px;
+    transform: rotate(-3deg) scale(.1);
+    transition: opacity .15s, transform ease-out .15s;
+    transform-origin: 0 0;
+}
+
+.mini-preview-anchor:hover .mini-preview-wrapper {
+    z-index: 2;
+    opacity: 1;
+    transform: rotate(3deg) scale(1);
+}
+
+.mini-preview-loading, .mini-preview-cover {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;    
+}
+
+.mini-preview-loading {
+    display: table;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    color: var(--white);
+    background-color: var(--blue);
+}
+
+.mini-preview-loading::before {
+    content: 'Loading...';
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.mini-preview-frame {
+    border: none;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
 }
