--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,6 @@
 @import "reset.css";
 @import "layout.css";
 @import "switches.css";
-@import "heart.css";
+@import "preview.css";
 @import "dark.css";
 @import "media.css";
