--- a/css/styles.css
+++ b/css/styles.css
@@ -4,5 +4,6 @@
 @import "layout.css";
 @import "switches.css";
 @import "preview.css";
+@import "drawer.css";
 @import "dark.css";
 @import "media.css";
