--- a/css/media.css
+++ b/css/media.css
@@ -2,7 +2,7 @@
 @media screen and (max-width: 768px) {
 
     .page {
-        padding: 0 2rem;
+        padding: 2rem;
     }
 
     .heart-machine {
